5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1582_1334.log
== TEST (2019-03-26 17:11:19) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ", ...)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  Ellipsis
Divisao:  Ellipsis
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:11:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  Ellipsis
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:11:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ", ...)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  Ellipsis
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:11:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ", ...)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  Ellipsis
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:36) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",)

print("Potenciacao: ", 2**1/3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto: 
Potenciacao:  0.6666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",)

print("Potenciacao: ", (2)**1/3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto: 
Potenciacao:  0.6666666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:13:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",)

print("Potenciacao: "2**3,)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: "2**3,)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:13:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",)

print("Potenciacao: ",2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto: 
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:14:43) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",58%3)

print("Potenciacao: ",2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:15:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",62%3)

print("Potenciacao: ",2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  2
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:15:09) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",64%3)

print("Potenciacao: ",2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:15:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",69%3)

print("Potenciacao: ",2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:16:36) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",58%5)

print("Potenciacao: ",2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  3
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:16:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",58%10)

print("Potenciacao: ",2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:16:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ",10-2)

print("Multiplicacao: ",4*2)

print("Divisao: ",16/2)

print("Resto: ",58%10)

print("Potenciacao: ",2**3)
-- EXECUTION TIME:
0.154212
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
